Fix home page buttons on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -222,3 +222,9 @@ h1 {
   cursor: not-allowed;
 }
 
+.no-float-mobile {
+  @include breakpoint($mobile) {
+    float: none;
+  }
+}
+
